--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -72,6 +72,7 @@
 						<li><%= link_to 'Add Team', new_league_team_path(@league), class: "mdl-button--primary" %></li>
 					<% elsif @league.has_team_owned_by?(@current_user) %>
 						<li><%= link_to 'Games', league_games_path(@league), class: "mdl-button--primary" %></li>
+						<li><%= link_to 'Players', league_players_path(@league), class: "mdl-button--primary" %></li>
 						<li><%= link_to 'Transfers', league_transfers_path(@league), class: "mdl-button--primary" %></li>
 						<li><%= link_to 'Free agents', league_contracts_path(@league), class: "mdl-button--primary" %></li>
 					<% end %>
