--- a/app/views/transfer_items/_form.html.erb
+++ b/app/views/transfer_items/_form.html.erb
@@ -38,7 +38,7 @@
       <div id="transfer_item_cash_div" <% if !@transfer_item.id %>class="hidden_div"<% end %> >
         <div class="form-group">
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <%= f.text_field :cash_cents, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+            <%= f.text_field :cash_cents, pattern: "^[1-9]{1}[0-9]*$", value: params[:cash_cents], class: "mdl-textfield__input" %>
             <%= f.label "Cash amount", class: "mdl-textfield__label" %>
             <span class="mdl-textfield__error">Invalid amount.</span>
           </div>
