Add JS to allow tabbing between team_player views

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -73,5 +73,5 @@
 			</div>
 		</div>
 	</div>
-	<%= render partial: "shared/team_players" %>
+	<%= render partial: "shared/team_players/tables" %>
 </div>
