Set stats view as default

--- a/app/views/shared/team_players/_tables.html.erb
+++ b/app/views/shared/team_players/_tables.html.erb
@@ -6,7 +6,7 @@
         <h3 class="mdl-card__title-text">Squad</h3>
       </div>
 			<ul class="horizontal-style-tabs">
-				<li><a id="performance_details_link" class="normal-text">View stats</a></li>
+				<li><a id="performance_details_link" class="normal-text selected-tab">View stats</a></li>
 				<li><a id="contract_details_link" class="normal-text">View contracts</a></li>
 			</ul>
 		</div>
