Include shared table on direct transfer bids

--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -57,6 +57,8 @@
 				</ul>
 			</div>
 		</div>
-		<%= render partial: 'shared/player_game_week_table', locals: {player: @team_player.player} %>
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			<%= render partial: 'shared/player_game_week_table', locals: {player: @team_player.player} %>
+		</div>		
 	</div>
 </div>
