--- a/app/views/transfer_items/new.html.erb
+++ b/app/views/transfer_items/new.html.erb
@@ -4,7 +4,8 @@
 		<div class="mdl-card__title">
 			<h2 class="mdl-card__title-text">
 				<% if direct_bid %>
-					Make offer
+					<% player = TeamPlayer.find(@transfer.transfer_items.first.team_player_id).player %>
+					Make offer for <%= player.full_name(true, 17) %>
 				<% else %>
 					Add item to transfer
 				<% end %>		
@@ -13,6 +14,7 @@
 
 		<% if direct_bid %>
 			<%= render 'bid_form' %>
+			<%= render partial: 'shared/player_game_week_table', locals: {player: player} %>
 		<% else %>
 			<%= render 'form' %>
 		<% end %>
