--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -1,5 +1,3 @@
-<% league = League.find(params[:league_id]) %>
-<% team = @current_user.teams.joins(:league).where('leagues.id = ?', league.id).first %>
 <%= form_for([league, @contract]) do |f| %>
   <% if @contract.errors.any? %>
     <div class="mdl-card__supporting-text">
@@ -18,55 +16,77 @@
   <% end %>
 
   <div class="mdl-card__actions">
-    <% if !@contract.id %>
-    <%= f.label "Choose player", class: "non-floating-label" %>
-    <div class="collection_radio_buttons">
-      <form id="position_dropdown_form">
-        <input id="position_dropdown_all" type="radio" name="player_position_dropdown" value="All" checked>
-        <label for="position_dropdown_all">All</label>
-        <input id="position_dropdown_goalkeeper" type="radio" name="player_position_dropdown" value="GK">
-        <label for="position_dropdown_goalkeeper">GK</label>
-        <input id="position_dropdown_defender" type="radio" name="player_position_dropdown" value="DF">
-        <label for="position_dropdown_defender">DF</label>
-        <input id="position_dropdown_midfielder" type="radio" name="player_position_dropdown" value="MD">
-        <label for="position_dropdown_midfielder">MD</label>
-        <input id="position_dropdown_forward" type="radio" name="player_position_dropdown" value="FW">
-        <label for="position_dropdown_forward">FW</label>
-      </form>
-    </div>
+    <% if !direct_offer %>
+      <% if !@contract.id %>
+        <%= f.label "Choose player", class: "non-floating-label" %>
+        <div class="collection_radio_buttons">
+          <form id="position_dropdown_form">
+            <input id="position_dropdown_all" type="radio" name="player_position_dropdown" value="All" checked>
+            <label for="position_dropdown_all">All</label>
+            <input id="position_dropdown_goalkeeper" type="radio" name="player_position_dropdown" value="GK">
+            <label for="position_dropdown_goalkeeper">GK</label>
+            <input id="position_dropdown_defender" type="radio" name="player_position_dropdown" value="DF">
+            <label for="position_dropdown_defender">DF</label>
+            <input id="position_dropdown_midfielder" type="radio" name="player_position_dropdown" value="MD">
+            <label for="position_dropdown_midfielder">MD</label>
+            <input id="position_dropdown_forward" type="radio" name="player_position_dropdown" value="FW">
+            <label for="position_dropdown_forward">FW</label>
+          </form>
+        </div>
+        <div class="form-group">
+          <div class="selectdiv">
+            <%= f.collection_select(:player_id, Player.where.not(id: players_to_exlcude.map(&:id)).sort_by {|p| [p.sort_val, p.last_name.downcase, p.first_name.downcase] }, :id, "#{:full_name_and_playing_position_and_real_team}", {include_blank: "Choose player...", selected: params[:player_id]}) %>
+          </div>
+        </div>
+      <% else %>
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <%= text_field_tag :contract_player_full_name, @contract.player.full_name, disabled: true, class: "mdl-textfield__input" %>
+          <%= label_tag :contract_player_full_name, "Player", class: "mdl-textfield__label" %>
+        </div>
+      <% end %>
       <div class="form-group">
-        <div class="selectdiv">
-          <% @players_to_exlcude = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) | Player.joins(:contracts).where('contracts.team_id = ?', team.id) %>
-          <%= f.collection_select(:player_id, Player.where.not(id:@players_to_exlcude.map(&:id)).sort_by {|p| [p.sort_val, p.last_name.downcase, p.first_name.downcase] }, :id, "#{:full_name_and_playing_position_and_real_team}", {include_blank: "Choose player...", selected: params[:player_id]}) %>
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <%= f.text_field :weekly_salary_cents, value: 25000, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+          <%= f.label "Weekly salary", class: "mdl-textfield__label" %>
+          <span class="mdl-textfield__error">Invalid salary.</span>
+        </div>
+      </div>
+      <% if !@contract.id %>
+        <%= f.hidden_field :starts_at, :value => Date.today %>
+      <% end %>
+      <%= f.hidden_field :team_id, :value => team.id %>
+      <div class="form-group">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <% if !@contract.id %>
+          <%= f.date_field :ends_at, value: 2.years.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
+          <% else %>
+          <%= f.date_field :ends_at, class: "mdl-textfield__input" %>
+          <% end %>
+          <%= f.label :ends_at, class: "mdl-textfield__label" %>
         </div>
       </div>
     <% else %>
+      <%= f.hidden_field :starts_at, :value => Date.today %>
+      <%= f.hidden_field :team_id, :value => team.id %>
+      <%= f.hidden_field :player_id, :value => player.id %>
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <%= text_field_tag :contract_player_full_name, @contract.player.full_name, disabled: true, class: "mdl-textfield__input" %>
+        <%= text_field_tag :contract_player_full_name, player.full_name, disabled: true, class: "mdl-textfield__input" %>
         <%= label_tag :contract_player_full_name, "Player", class: "mdl-textfield__label" %>
       </div>
-    <% end %>
-    <div class="form-group">
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <%= f.text_field :weekly_salary_cents, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
-        <%= f.label "Weekly salary", class: "mdl-textfield__label" %>
-        <span class="mdl-textfield__error">Invalid salary.</span>
+      <div class="form-group">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <%= f.text_field :weekly_salary_cents, value: 25000, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+          <%= f.label "Weekly salary", class: "mdl-textfield__label" %>
+          <span class="mdl-textfield__error">Invalid salary.</span>
+        </div>
       </div>
-    </div>
-    <% if !@contract.id %>
-      <%= f.hidden_field :starts_at, :value => Date.today %>
-    <% end %>
-    <%= f.hidden_field :team_id, :value => team.id %>
-    <div class="form-group">
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <% if !@contract.id %>
-        <%= f.date_field :ends_at, value: 2.years.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
-        <% else %>
-        <%= f.date_field :ends_at, class: "mdl-textfield__input" %>
-        <% end %>
-        <%= f.label :ends_at, class: "mdl-textfield__label" %>
+      <div class="form-group">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <%= f.date_field :ends_at, value: 2.years.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
+          <%= f.label :ends_at, class: "mdl-textfield__label" %>
+        </div>
       </div>
-    </div>
+    <% end %>
     <div class="form-group">
       <%= f.submit "Offer contract", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
       <%= link_to "Cancel", :back, class: "cancel_link_anchor" %>
