--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -1,8 +1,10 @@
+<% league = League.find(params[:league_id]) %>
+<% team = @current_user.teams.joins(:league).where('leagues.id = ?', league.id).first %>
 <div class="col-sm-12">
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
 		<div class="mdl-card__title">
 			<h2 class="mdl-card__title-text">Update contract</h2>
 		</div>
-			<%= render 'form' %>
+			<%= render partial: 'form', locals: { league: league, team: team, direct_offer: false } %>
 	</div>
 </div>
