--- a/app/views/transfer_items/_bid_form.html.erb
+++ b/app/views/transfer_items/_bid_form.html.erb
@@ -21,11 +21,38 @@
     <%= f.hidden_field :sending_team_id, value: @transfer.primary_team.id %>
     <%= f.hidden_field :receiving_team_id, value: @transfer.secondary_team.id %>
     <%= f.hidden_field :transfer_item_type, value: "Cash" %>
+    <div class="mdl-card__actions">
+      <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+        <tr>
+          <th class="mdl-data-table__cell--non-numeric">
+            <span>Player</span>
+          </th>
+          <th>
+            <span>Salary</span>
+          </th>
+          <th>
+            <span>Ends</span>
+          </th>
+        </tr>
+        <tr>
+          <td class="mdl-data-table__cell--non-numeric normal-text">
+            <%= team_player.full_name(true, 20) %>
+          </td>
+          <td class="normal-text">
+            <%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %>
+          </td>
+          <td class="normal-text">
+            <%= team_player.current_contract.ends_at.strftime("%d-%b-%y") %>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <br/>
     <div id="transfer_item_cash_div" >
       <div class="form-group">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
           <%= f.text_field :cash_cents, pattern: "^[1-9]{1}[0-9]*$", value: params[:cash_cents], class: "mdl-textfield__input" %>
-          <%= f.label "Cash amount", class: "mdl-textfield__label" %>
+          <%= f.label "Tranfer bid", class: "mdl-textfield__label" %>
           <span class="mdl-textfield__error">Invalid amount.</span>
         </div>
       </div>
