--- a/app/views/transfers/show.html.erb
+++ b/app/views/transfers/show.html.erb
@@ -12,11 +12,11 @@
       	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 					<tr>
 						<th class="mdl-data-table__cell--non-numeric">
-							<span><%= @transfer.primary_team.title %></span>
-						</th>
-						<th class="mdl-data-table__cell--non-numeric">
-							<span><%= @transfer.secondary_team.title %></span>
-						</th>
+								<span><%= truncate(@transfer.primary_team.title, length: 13) %></span>
+							</th>
+							<th class="mdl-data-table__cell--non-numeric">
+								<span><%= truncate(@transfer.secondary_team.title, length: 13) %></span>
+							</th>
 					</tr>
 					<tr>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
@@ -48,10 +48,10 @@
 					<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 						<tr>
 							<th class="mdl-data-table__cell--non-numeric">
-								<span><%= @transfer.primary_team.title %></span>
+								<span><%= truncate(@transfer.primary_team.title, length: 13) %></span>
 							</th>
 							<th class="mdl-data-table__cell--non-numeric">
-								<span><%= @transfer.secondary_team.title %></span>
+								<span><%= truncate(@transfer.secondary_team.title, length: 13) %></span>
 							</th>
 							<th class="mdl-data-table__cell--non-numeric">
 								<span> </span>
