--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -78,6 +78,8 @@
 					<% end %>
 					<% if @league.is_owned_by_this_user?(@current_user) %>
 						<li><%= link_to 'Invites', league_league_invites_path(@league), class: "mdl-button--primary" %></li>
+					<% else %>
+						<li><%= link_to 'Invites', leagues_path, class: "mdl-button--primary" %></li>
 					<% end %>
 				</ul>
 			</div>
