--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -60,98 +60,30 @@
           <%= @home_team.title %> (<%= @home_team.user.full_name %>)
         </div>
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-          <tr>
-            <th class="mdl-data-table__cell--non-numeric">
-              <span>Pos</span>
-            </th>
-            <th class="mdl-data-table__cell--non-numeric">
-              <span>Player</span>
-            </th>
-            <th>
-              <span>Min</span>
-            </th>
-            <th>
-              <span>Sco</span>
-            </th>
-            <th>
-              <span>Ass</span>
-            </th>
-            <th>
-              <span>Con</span>
-            </th>
-          </tr>
-          <% @home_team.player_lineups.joins(:player_game_week, :squad_position).where('game_week_id = ? AND squad_positions.short_name != ?', @game_week.id, 'SUB').order("squad_positions.sort_order").each do |player_lineup| %>
-            <tr>
-              <td class="mdl-data-table__cell--non-numeric normal-text">
-                <%= player_lineup.squad_position.short_name %>
-              </td>
-              <td class="mdl-data-table__cell--non-numeric normal-text">
-                <%= player_lineup.player_game_week.player.full_name(true) %>
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.minutes_played.to_i %>
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.goals.to_i %>
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.assists.to_i %>
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.goals_conceded.to_i %>
-              </td>
-            </tr>
+          <%= render partial: "shared/games/table_header" %>
+          <% home_team_lineups = @home_team.player_lineups.joins(:player_game_week, :squad_position).where('game_week_id = ? AND squad_positions.short_name != ?', @game_week.id, 'SUB').order("squad_positions.sort_order") %>
+          <% home_team_lineups.each do |player_lineup| %>
+            <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %>
           <% end %>
         </table>
+        <%= @game.get_total_attacking_contribution(home_team_lineups) %>
+        <br/>
+        <%= @game.get_total_defensive_contribution(home_team_lineups) %>
       </div>
       <div class="mdl-card__actions">
         <div class="mdl-card__supporting-text">
           <%= @away_team.title %> (<%= @away_team.user.full_name %>)
         </div>
         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-          <tr>
-            <th class="mdl-data-table__cell--non-numeric">
-              <span>Pos</span>
-            </th>
-            <th class="mdl-data-table__cell--non-numeric">
-              <span>Player</span>
-            </th>
-            <th>
-              <span>Min</span>
-            </th>
-            <th>
-              <span>Sco</span>
-            </th>
-            <th>
-              <span>Ass</span>
-            </th>
-            <th>
-              <span>Con</span>
-            </th>
-          </tr>
-          <% @away_team.player_lineups.joins(:player_game_week, :squad_position).where('game_week_id = ? AND squad_positions.short_name != ?', @game_week.id, 'SUB').order("squad_positions.sort_order").each do |player_lineup| %>
-            <tr>
-              <td class="mdl-data-table__cell--non-numeric normal-text">
-                <%= player_lineup.squad_position.short_name %>
-              </td>
-              <td class="mdl-data-table__cell--non-numeric normal-text">
-                <%= player_lineup.player_game_week.player.full_name(true) %>
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.minutes_played.to_i %>  
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.goals.to_i %>
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.assists.to_i %>
-              </td>
-              <td class="normal-text">
-                <%= player_lineup.player_game_week.goals_conceded.to_i %>
-              </td>
-            </tr>
+          <%= render partial: "shared/games/table_header" %>
+          <% away_team_lineups = @away_team.player_lineups.joins(:player_game_week, :squad_position).where('game_week_id = ? AND squad_positions.short_name != ?', @game_week.id, 'SUB').order("squad_positions.sort_order") %>
+          <% away_team_lineups.each do |player_lineup| %>
+            <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %>
           <% end %>
         </table>
+        <%= @game.get_total_attacking_contribution(away_team_lineups) %>
+        <br/>
+        <%= @game.get_total_defensive_contribution(away_team_lineups) %>
       </div>
     </div>
   </div>
