--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -105,6 +105,12 @@ td[id^="my_contract_offer_name_"].best-offer {
   text-align: left;
   text-indent: -28px;
 }
+.bold-row {
+	border-top: 2px solid #999;
+}
+.bold-row > td {
+	font-weight: 400;
+}
 .cancel_link_anchor {
 	display: block;
 	float: right;
