Add att & def views to games & offer views

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -56,8 +56,8 @@
         </table>
       </div>
       <ul class="horizontal-style-tabs">
-        <li><a id="raw_details_link" class="normal-text selected-tab">View raw player stats</a></li>
-        <li><a id="contribution_details_link" class="normal-text">View player contributions</a></li>
+        <li><a id="detailed_stats_link" class="normal-text selected-tab">View details</a></li>
+        <li><a id="summary_stats_link" class="normal-text">View summary</a></li>
       </ul>
       <div class="mdl-card__actions">
         <div class="mdl-card__supporting-text">
