--- a/app/views/shared/games/_table_header.html.erb
+++ b/app/views/shared/games/_table_header.html.erb
@@ -8,13 +8,19 @@
   <th>
     <span>Mp</span>
   </th>
-  <th>
+  <th class="detailed_stats">
     <span>Gs</span>
   </th>
-  <th>
+  <th class="detailed_stats">
     <span>A</span>
   </th>
-  <th>
+  <th class="detailed_stats">
     <span>Gc</span>
+  </th>
+  <th class="hide summary_stats">
+    <span>Att</span>
+  </th>
+  <th class="hide summary_stats">
+    <span>Def</span>
   </th>
 </tr>
